syntax = "proto3";

package statechart;

message Document {
  string name = 1;
  repeated State states = 2;
  repeated Transition transitions = 3;
  string datamodel = 4;
}

message State {
  enum Type {
    compound = 0;
    atomic = 1;
    parallel = 2;
    history_shallow = 3;
    history_deep = 4;
    initial = 5;
    final = 6;
  }
  Type type = 1;
  uint32 idx = 2;
  string id = 3;
  repeated Expression on_enter = 4;
  repeated Expression on_exit = 5;
  uint32 parent = 6;
  bytes children = 7;
  bytes ancestors = 8;
  bytes completion = 9;
  bytes transitions = 10;
  bool has_history = 11;
}

message Transition {
  enum Type {
    external = 0;
    targetless = 1;
    internal = 3;
    spontaneous = 4;
    history = 5;
    initial = 6;
  }
  Type type = 1;
  uint32 idx = 2;
  uint32 source = 3;
  repeated string events = 4;
  Expression condition = 5;
  repeated Expression on_transition = 6;
  bytes targets = 7;
  bytes conflicts = 8;
  bytes exits = 9;
}

message Expression {
  string eval = 1;
  string string = 2;
  repeated Expression children = 3;
  Document document = 4;
}
